--- a/TPGurin/TPGurin.csproj
+++ b/TPGurin/TPGurin.csproj
@@ -62,6 +62,7 @@
       <DependentUpon>FormAirDrom.cs</DependentUpon>
     </Compile>
     <Compile Include="IAir.cs" />
+    <Compile Include="MultiLevelAirdrom.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SuperAir.cs" />
