--- a/TPGurin/TPGurin.csproj
+++ b/TPGurin/TPGurin.csproj
@@ -55,6 +55,12 @@
       <DependentUpon>AirForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Direction.cs" />
+    <Compile Include="FormAirConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAirConfig.Designer.cs">
+      <DependentUpon>FormAirConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormAirDrom.cs">
       <SubType>Form</SubType>
     </Compile>
